--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
-# flyctl launch added from .gitignore
-**\node_modules
-**\uploads\input
-**\uploads\output
-**\*.log
+# Fly added from .gitignore
+**/node_modules
+**/uploads/input
+**/uploads/output
+**/*.log
 
 fly.toml
