--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "prestart": "./init-libs.sh && ./force-javacpp-load.sh"
   },
   "keywords": [],
   "author": "",
