--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "prestart": "./init-libs.sh && ./force-javacpp-load.sh"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
